# binslice

./: Cargo.toml  README.md
src/: common.rs  lib.rs  tests.rs
tests/: tests.rs
